bk_ida/gccida/c1/trampoline_address
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trampoline_address/src/function.c:6172:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trampoline_address/src/function.c:6176:4: error: expected ';' after expression
rtx v11; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trampoline_address/src/function.c:6176:5: error: use of undeclared identifier 'v11'; did you mean 'v10'?
rtx v11; // r15 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trampoline_address/src/function.c:6175:19: note: 'v10' declared here
 struct function *v10; // rcx 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trampoline_address/src/function.c:6182:44: error: expected expression
while ( x_trampoline_list->type.values !=  struct function ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trampoline_address/src/function.c:6207:1: error: use of undeclared identifier 'v11'; did you mean 'v10'?
v11 = assign_stack_local_1( BLKmode, v9, 0, v10); 
^~~
v10
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trampoline_address/src/function.c:6175:19: note: 'v10' declared here
 struct function *v10; // rcx 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trampoline_address/src/function.c:6209:40: error: use of undeclared identifier 'v11'
node->int_cst.int_cst.high = ( __int64)v11; 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trampoline_address/src/function.c:6214:7: error: use of undeclared identifier 'v11'
rtx = v11->fld[0].rtx; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trampoline_address/src/function.c:6223:32: error: expected expression
while ( chain->type.values !=  struct function ) 
                               ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/trampoline_address/src/obj/function.o] Error 1
